# nostr_terminal

./: Cargo.toml  LICENSE  README.md
src/: main.rs
