[package]
name = "nostr_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bech32 = "0.9"
chrono = "0.4"
futures-util = "0.3"
hex = "0.4"
secp256k1 = { version = "0.27.0", features = ["rand", "rand-std", "bitcoin-hashes", "global-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
